Fixed the alignment of the mouse by adding padding-bottom on header

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -65,7 +65,7 @@
   }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1200px) {
   .features__wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
