--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -94,7 +94,8 @@ section {
   flex-direction: column;
   justify-content: center;
   min-height: calc(100vh - 2 * 80px);
-  position: relative; }
+  position: relative;
+  padding-bottom: 30px; }
 
 .masthead__title,
 .header__article--title,
@@ -190,13 +191,18 @@ section {
 
 .scrolldown-container {
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
   text-align: center;
-  display: none;
-  color: #ced8de; }
+  display: none; }
+
+.scrolldown-container > p {
+  color: #ced8de;
+  font-size: 14px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 .mouse {
   margin: auto;
@@ -442,7 +448,7 @@ section {
   .features__paragraph {
     font-size: 16px; } }
 
-@media (min-width: 1100px) {
+@media (min-width: 1200px) {
   .features__wrapper {
     grid-template-columns: repeat(3, 1fr); } }
 
